# raytracer

./: CMakeLists.txt  Makefile  README.md  camera.cpp  camera.h  color.cpp  color.h  hittable.cpp  hittable.h  interval.cpp  interval.h  main.cpp  material.cpp  material.h  ray.cpp  ray.h  rtmath.cpp  rtmath.h  sphere.h  test_ppm.cpp  vec3.h
src/: color.cpp  color.h  hittable.h  interval.cpp  interval.h  material.cpp  ray.h  rtmath.cpp  rtmath.h  sphere.cpp  sphere.h  vec3.cpp
